--- a/pages/regular/regular.wxml
+++ b/pages/regular/regular.wxml
@@ -1,34 +1,36 @@
 <!--pages/regular/regular.wxml-->
 <view class="container">
   <block wx:if="{{ !ing }}">
-    <image class="header-bg" src="https://shiancha.guduokeji.com/lib/regular/bg.png" mode="scaleToFill"></image>
+    <image class="header-bg" src="https://shiancha.guduokeji.com/lib/home/bg.png" mode="scaleToFill"></image>
     <image class="regular-title" src="https://shiancha.guduokeji.com/lib/regular/title.png"></image>
     <view class="regular-desc">
       玩家初始体力值为10，答对不扣体力值答错1次扣1体力值每成功答对10题解锁1次幸运转盘，抽取神秘礼品每6分钟自动增加1体力值。
     </view>
     <image bindtap="start" class="regular-start" src="https://shiancha.guduokeji.com/lib/regular/start.png"></image>
   </block>
+  <!-- 正在答题状态 -->
   <block wx:else>
-    <image class="header-bg" src="https://shiancha.guduokeji.com/lib/regular/ing_bg.png" mode="scaleToFill"></image>
+    <!-- 答题 -->
+    <image class="header-bg" src="https://shiancha.guduokeji.com/lib/home/bg.png" mode="scaleToFill"></image>
     <view class="percent">
       <image class="percent-bg" src="https://shiancha.guduokeji.com/lib/regular/percent.png"></image>
       <image class="power-item" wx:for="{{ power }}" wx:for-index="idx" wx:key="idx" src="https://shiancha.guduokeji.com/lib/regular/power.png"></image>
       <image class="power-item" wx:for="{{ 10 - power }}" wx:for-index="idx" wx:key="idx" src="https://shiancha.guduokeji.com/lib/regular/power_null.png"></image>
     </view>
     <view class="gold-wrap">
-      <image class="gold-icon" src="https://shiancha.guduokeji.com/lib/regular/gold.png"></image>14
+      <image class="gold-icon" src="https://shiancha.guduokeji.com/lib/regular/gold.png"></image>{{ points }}
     </view>
     <image class="question-header" src="https://shiancha.guduokeji.com/lib/regular/header.png"></image>
     <image class="question-container" src="https://shiancha.guduokeji.com/lib/regular/container.png"></image>
     <image class="question-logo" src="https://shiancha.guduokeji.com/lib/regular/logo.png"></image>
     <image class="question-blank" src="https://shiancha.guduokeji.com/lib/regular/blank.png"></image>
     <view class="quest-wrap">
-      <view class="quest-index">- 第 {{question.index}} 题 -</view>
-      <view class="quest-desc">{{ question.desc }}</view>
-      <view class="quest-item">A. {{question.first}}</view>
-      <view class="quest-item">B. {{question.second}}</view>
-      <view class="quest-item">C. {{question.third}}</view>
-      <view class="quest-item active">D. {{question.fourth}}</view>
+      <view class="quest-index">- 第 {{ index }} 题 -</view>
+      <view class="quest-desc">{{ question.title }}</view>
+      <view class="quest-item {{ selectedIndex === '1' ? 'active' : ''}}" bindtap="selected" data-index="1">A. {{ question.firstAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '2' ? 'active' : ''}}" bindtap="selected" data-index="2">B. {{ question.secondAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '3' ? 'active' : ''}}" bindtap="selected" data-index="3">C. {{ question.thirdAnswer }}</view>
+      <view class="quest-item {{ selectedIndex === '4' ? 'active' : ''}}" bindtap="selected" data-index="4">D. {{ question.fourthAnswer }}</view>
     </view>
     <!-- 正确 -->
     <view class="about" wx:if="{{ showRight }}">
@@ -46,12 +48,12 @@
         <view class="right-answer">答案解析</view>
         <image class="right-blank" src="https://shiancha.guduokeji.com/lib/regular/blank.png"></image>
         <view class="answer-wrap">
-          <view class='right-number'>正确答案：{{3}}</view>
-          <view class='right-user'>{{'66%'}}用户答对</view>
-          <view class="right-know">小知识：创造了与阳光和美景融合的多功能空间，从大小和位置窗户望去，可以看到不同景色</view>
+          <view class='right-number'>正确答案：{{ answer.answer }}</view>
+          <view class='right-user'>{{ answer.percent }}%用户答对</view>
+          <view class="right-know">小知识：{{ answer.reason }}</view>
           <view style='margin-top: 33rpx;'>
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_stop.png" style="margin-right: 12rpx;"></image>          
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_stop.png" bindtap='goIndex' style="margin-right: 12rpx;"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png" bindtap="next"></image>          
           </view>
         </view>
       </view>
@@ -71,12 +73,12 @@
         <view class="right-answer">答案解析</view>
         <image class="right-blank" src="https://shiancha.guduokeji.com/lib/regular/blank.png"></image>
         <view class="answer-wrap">
-          <view class='right-number'>正确答案：{{3}}</view>
-          <view class='right-user'>{{'66%'}}用户答对</view>
-          <view class="right-know">小知识：创造了与阳光和美景融合的多功能空间，从大小和位置窗户望去，可以看到不同景色</view>
+          <view class='right-number'>正确答案：{{ answer.answer }}</view>
+          <view class='right-user'>{{ answer.percent }}%用户答对</view>
+          <view class="right-know">小知识：{{ answer.reason }}</view>
           <view style='margin-top: 33rpx;'>
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_stop.png" style="margin-right: 12rpx;"></image>          
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_stop.png" bindtap='goIndex' style="margin-right: 12rpx;"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png" bindtap="next"></image>          
           </view>
         </view>
       </view>
@@ -96,7 +98,7 @@
           <view class='right-user'>{{'66%'}}用户答对</view>
           <view class="right-know">小知识：创造了与阳光和美景融合的多功能空间，从大小和位置窗户望去，可以看到不同景色</view>
           <view style='margin-top: 33rpx;'>
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/out_btn.png"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/out_btn.png" bindtap='goIndex'></image>          
           </view>
         </view>
       </view>
@@ -118,8 +120,8 @@
           <view class='right-user'>{{'66%'}}用户答对</view>
           <view class="right-know">小知识：创造了与阳光和美景融合的多功能空间，从大小和位置窗户望去，可以看到不同景色</view>
           <view style='margin-top: 33rpx;'>
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png" style="margin-right: 12rpx;"></image>          
-            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/spin_go.png"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/right_next.png" bindtap="next" style="margin-right: 12rpx;"></image>          
+            <image class="right-btn" src="https://shiancha.guduokeji.com/lib/regular/spin_go.png" bindtap="goAward"></image>          
           </view>
         </view>
       </view>
