--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,12 @@
 /**index.wxss**/
+.getUserInfo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+}
 .header-bg {
   position: absolute;
   width: 100%;
